--- a/notes/13_hmm/0_hmm-motivation.tex
+++ b/notes/13_hmm/0_hmm-motivation.tex
@@ -90,6 +90,7 @@ e.g. 1-out-of-$M$ coding for $M$ different states:
 \end{frame}
 
 \begin{frame}{Only}
+\frametitle{Possibilities}
 
 We may want to do:
 \begin{itemize}
