--- a/notes/13_hmm/1_markov.tex
+++ b/notes/13_hmm/1_markov.tex
@@ -18,7 +18,7 @@
 Consider the random variables $y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}$.
 There is \textbf{no} statistical independence between the $y$'s:
 \begin{equation}
-P(y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}) \ne \prod_{t=1}^T P(y^{(t)})
+P(y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}) = \prod_{t=1}^T P(y^{(t)})
 \end{equation}
 
 But
