--- a/notes/13_hmm/1_markov.tex
+++ b/notes/13_hmm/1_markov.tex
@@ -18,16 +18,16 @@
 Consider the random variables $y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}$.
 There is \textbf{no} statistical independence between the $y$'s:
 \begin{equation}
-P(y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}) = \prod_{t=1}^T P(y^{(t)})
+P(y^{(1)}, y^{(2)}, \ldots, y^{(T-1)}, y^{(T)}) \ne \prod_{t=1}^T P(y^{(t)})
 \end{equation}
 
 But
 
 \begin{equation}
-P(y^{(t)} | y^{(t-1)}, y^{(t-2)}, \ldots, y^{(2)}, y^{(1)}) \ne P(y^{(t)} | y^{(t-1)})
+P(y^{(t)} | y^{(t-1)}, y^{(t-2)}, \ldots, y^{(2)}, y^{(1)}) = P(y^{(t)} | y^{(t-1)})
 \end{equation}
 
-$y{(t)}$ depends only on $y^{(t-1)}$ $\rightarrow$ \emph{Markov property}
+$y^{(t)}$ depends only on $y^{(t-1)}$ $\rightarrow$ \emph{Markov property}
 
 A sequence of samples of these $y$'s $\rightarrow$ \emph{Markov chain}
 
