grammar correction tutorial 01
'retaining most', or 'a much ... as possible'

--- a/notes/01_pca/0_dim.tex
+++ b/notes/01_pca/0_dim.tex
@@ -33,7 +33,7 @@ Our entire dataset:
 
 \begin{frame}\frametitle{\secname}
 We want to reduce the number of elements in $\vec x \in \R^N$
-while retaining as most of the intrinsic information content.
+while retaining most of the intrinsic information content.
 
 \question{For what purpose?}\\
 
