--- a/notes/02_online-pca/2_apply-online-pca.tex
+++ b/notes/02_online-pca/2_apply-online-pca.tex
@@ -30,7 +30,7 @@ Can also be done using ``standard'' or ``batch'' PCA.
 \begin{frame}\frametitle{\subsecname}
 
 \only<1>{
-\question{What are the PCs with smallest eigenvalues useful for?}
+\question{What are the PCs with smallest eigenvalues useful for?}\\
 }
 
 \pause 
