spelling correction tutorial 03

--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -218,7 +218,7 @@ a^{(\beta)} \vec{\phi}^{(\alpha)}
 \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}
 \end{equation}
 
-We are one step closer to not needing the eplxicit mapping $\phi$.
+We are one step closer to not needing the explicit mapping $\phi$.
 
 \end{frame}
 
@@ -243,7 +243,7 @@ We are one step closer to not needing the eplxicit mapping $\phi$.
 }
 
 \notesonly{
-Recall from \sectionref{sec:nonlin} that we not even be able compute $\vec{\phi}_{(\vec{x})}$ but we now see it is possible to avoid the transformation altogether by exploiting the kernel trick (cf. Eq.\ref{eq:trick}) by substituing 
+Recall from \sectionref{sec:nonlin} that we are not even able to compute $\vec{\phi}_{(\vec{x})}$ but we now see it is possible to avoid the transformation altogether by exploiting the kernel trick (cf. Eq.\ref{eq:trick}) by substituting 
 $ K_{\alpha \beta} $ for
 $
 \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})}
