--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -725,7 +725,7 @@ Recall in linear PCA, to get the component of $\vec x$ in the direction of the $
 u_k(\vec x) = \vec e_k^\top \vec x
 \end{equation}
 
-Assuming we have a the $\phi$'s:
+Assuming we have all the $\phi$'s:
 
 \svspace{-3mm}
 
