--- a/notes/05_infomax/1_primer_info_theory.tex
+++ b/notes/05_infomax/1_primer_info_theory.tex
@@ -446,7 +446,7 @@ D_{KL} \lbrack \, {\color{blue}p_{X,Y}(x,y)} \, || \, {\color{red}p_X(x) p_Y(y)}
 D_{KL} \lbrack \, {\color{red}p_X(x) p_Y(y)} \, || \, {\color{blue}p_{X,Y}(x,y)}\, \rbrack
 \end{equation}
 
-The above is only equal if both of them are equal to zero, which is satisfied iff $p_{X,Y}(x,y) = p_X(x) p_Y(y)$.
+The above is only equal if both of them are equal to zero, which is satisfied if $p_{X,Y}(x,y) = p_X(x) p_Y(y)$.
 
 \notesonly{
 This tells us that the mutual information $I(X,Y)$ is equivalent to the KL-divergence between the joint distribution $p_{X,Y}(x,y)$ and 
