--- a/notes/05_infomax/2_infomax.tex
+++ b/notes/05_infomax/2_infomax.tex
@@ -24,7 +24,7 @@
   
 \item[]
   If sources are independent, then
-  transformations of these sources are independent, too.\\
+  transformations of these sources are independent too.\\
   
   \svspace{5mm}
   
@@ -73,7 +73,7 @@ Using the general rule for density transformations and applying it here yields
 		\widehat{P}_{s_i}(\widehat{s}_i)
 \end{equation}
 where $\left|\frac{d \widehat{s}_i}{d \widehat{u}_i} \right|$ is
-called \emph{functional determinant} of the transformation
+called the \emph{functional determinant} of the transformation
 $\widehat{f}_i$.
 
 Analogously for the joint distribution:
