grammar and formatting tutorial 05

--- a/notes/05_infomax/4_gradient.tex
+++ b/notes/05_infomax/4_gradient.tex
@@ -182,7 +182,7 @@ The shortest distance between two points on a map is not a straight line but rat
 
 \only<1>{
 Online learning with standard gradients
-\notesonly{requires us to construct a learning rate schedule to ensure we stop overshooting the solution. A decaying learning rate strategy is easier to control if the magnitudes of the gradients are more ``behaved'' you don't suddenly get strong magnitudes that could lead to overshooting the solution. 
+\notesonly{requires us to construct a learning rate schedule to ensure we stop overshooting the solution. A decaying learning rate strategy is easier to control if the magnitudes of the gradients are more ``behaved'' so you don't suddenly get strong magnitudes that could lead to overshooting the solution.\\ 
 }
 \slidesonly{
 \begin{itemize}
