--- a/notes/06_fastica/3_badgaussians.tex
+++ b/notes/06_fastica/3_badgaussians.tex
@@ -156,7 +156,7 @@ Further details can be found in Hyv{\"a}rinen Ch. 2.5.
 }
 }
 
-A mixture of sources where, at most, one is Gaussian, can still be separated by ICA. It only becomes a problem when we have more than one Gaussian.
+A mixture of sources where, at most, one is Gaussian can still be separated by ICA. It only becomes a problem when we have more than one Gaussian.
 
 
 \slidesonly{
