--- a/notes/08_clustering/5_pairwise_data.tex
+++ b/notes/08_clustering/5_pairwise_data.tex
@@ -151,7 +151,7 @@ E_{ \big[ \big\{ m_q^{(\alpha)} \big\} \big] }
 \begin{frame}\frametitle{\subsecname}
 
 \notesonly{
-When we choose squared Euclidean distance as the distance measure for pairwise clustering, we can show that this choice let's pairwise clustering effectively find the same solution as K-means clustering.
+When we choose squared Euclidean distance as the distance measure for pairwise clustering, we can show that this choice lets pairwise clustering effectively find the same solution as K-means clustering.
 }
 
 \begin{center}
