--- a/notes/08_clustering/5_pairwise_data.tex
+++ b/notes/08_clustering/5_pairwise_data.tex
@@ -352,7 +352,7 @@ The individual state variables $s_k$ in the state vector $\vec s$ were assumed t
 \implies
     \langle \Pi_k s_k \rangle_Q = \Pi_k \langle s_k\rangle_Q.
 \end{equation}
-When we use mean-field annealing in the context of pairwise clustering it is the assignment variables $m_q^{(\alpha)}$ that stand for the state variables. The assignment is based on \textbf{pairwise} distance, this violates our assumption of having independent state variables. $m_q^{(\alpha)}$ is not completely independent of $m_q^{(\alpha')}$.
+When we use mean-field annealing in the context of pairwise clustering, it is the assignment variables $m_q^{(\alpha)}$ that stand for the state variables. The assignment is based on \textbf{pairwise} distance, this violates our assumption of having independent state variables. $m_q^{(\alpha)}$ is not completely independent of $m_q^{(\alpha')}$.
  Therefore, the 
 calculation of moments and mean-fields must be adapted.
 }
