--- a/notes/08_clustering/6_pairwsie_meanfield.tex
+++ b/notes/08_clustering/6_pairwsie_meanfield.tex
@@ -88,7 +88,7 @@ This is based on the individual state variables being \emph{uncorrelated}.
 \end{frame}
 
 \begin{frame}
-\notesonly{Some nomenclature, before we demonstrate the same factorization for the assignment variables in pairwise clustering.}
+\notesonly{Some nomenclature before we demonstrate the same factorization for the assignment variables in pairwise clustering.}
 \slidesonly{ Nomenclature }($\otimes$ $\rightarrow$ \emph{set-product, Cartesian product})\\
  
  \begin{tabular}{r l p{9cm}}
