--- a/notes/11_density-est/1_kde.tex
+++ b/notes/11_density-est/1_kde.tex
@@ -44,8 +44,8 @@ When we talk about density estimation, we are talking about recovering the under
 
 \begin{enumerate}[(A)]
 \item \textbf{parametric} methods:
-\\ We assume that the data follows some class of distribution and we estimate its paramters (e.g. fit a Gaussian around this data)
-\item \textbf{non-parametric}\footnote{non-parametric does not means it is void of paramters. 
+\\ We assume that the data follows some class of distribution and we estimate its parameters (e.g. fit a Gaussian around this data)
+\item \textbf{non-parametric}\footnote{non-parametric does not means it is void of parameters. 
 It is just that the parameters do not directly correspond to the classical parameters of densities such as mean and variance.} methods: 
 data-driven. Estimate the density with as few assumptions as possible (e.g. Kernel\footnote{Not tied to Mercer Kernels like in Kernel PCA. A kernel is just some non-negative function.} density estimation)
 \end{enumerate}
@@ -57,7 +57,7 @@ data-driven. Estimate the density with as few assumptions as possible (e.g. Kern
 \only<2>{\frametitle{Normalized Histograms $\rightarrow$ density}}
 
 \notesonly{
-Many people habe already encountered density estimation in the form of histograms.
+Many people have already encountered density estimation in the form of histograms.
 }
 
 \begin{minipage}{0.48\textwidth}
