punctuation and spelling

--- a/notes/13_hmm/2_hmm.tex
+++ b/notes/13_hmm/2_hmm.tex
@@ -27,14 +27,14 @@ P(\vec{x}^{(t)}  ~|~ \vec{x}^{(1)},  \dots,\vec{x}^{(t-1)}, \vec{m}^{(1)},  \dot
 		P(\vec{x}^{(t)}  ~|~ \vec{m}^{(t)})
 \end{equation}
 
-We want to estimate the above densities in the graphical model that is the HMM
+We want to estimate the above densities in the graphical model that is the HMM.
 
 \end{frame}
 
 \begin{frame}{Recap: Latent variable models - the likelihood}
 
 Latent variable models operate on the joint distribution of the observed and hidden variables.
-The likelhood is recovered by \textcolor{blue}{marginalizing} the latent variable.
+The likelihood is recovered by \textcolor{blue}{marginalizing} the latent variable.
 Recall in the general case of latent variable models:
 
 \begin{equation}
