--- a/notes/13_hmm/4_hmm-fwdbwd-usage.tex
+++ b/notes/13_hmm/4_hmm-fwdbwd-usage.tex
@@ -94,7 +94,7 @@ The forward-backward procedure needs the parameters to be known but they need no
 
 \begin{block}{Baum-Welch Algorithm}
 \begin{enumerate}
-\item The forward-backward procedure is given intermediate estimates of the parameters to compute the distributions
+\item The forward-backward procedure is given by intermediate estimates of the parameters to compute the distributions
 \item The EM algorithm updates the parameters to maximize the likelihood of the data.
 \end{enumerate}
 \end{block}
